--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@rendermode InteractiveServer
+@inject IConfiguration Config
 
 <PageTitle>Task Manager</PageTitle>
 
@@ -9,16 +11,54 @@
 <div class="row">
   <div class="col-lg-8 offset-lg-2">
     <Subtitle>Important</Subtitle>
+    
     <select class="form-select mb-3">
-      <option value="Important">Important</option>
+      @foreach (var c in categories)
+      {
+      <option value="@c.Name">@c.Name</option>
+      }
     </select>
 
     <ul class="list-group mb-5">
+      @foreach (var item in items)
+      {
       <li class="list-group-item">
         <input type="checkbox" class="form-check-input" />
-        <label for="" class="form-check-label">Buy Milk</label>
+        <label for="" class="form-check-label">@item.Task</label>
       </li>
+      }
     </ul>
   </div>
 </div>
+
+
+@code {
+  private List<Item> items = [];
+  private List<Category> categories = [];
+
+  private DataService? ds;
+
+
+  protected override async Task OnInitializedAsync()
+  {
+    ds = new(Config.GetConnectionString("default")!);
+    items = await GetItemsAsync();
+    categories = await GetCategoriesAsync();
+  }
+
+  private async Task<List<Item>> GetItemsAsync()
+  {
+    var sql = "select * from Item";
+    return await ds!.LoadData<Item, dynamic>(sql, new {});
+
+  }
+
+
+  private async Task<List<Category>> GetCategoriesAsync()
+  {
+    var sql = "SELECT * FROM Category";
+    return await ds!.LoadData<Category, dynamic>(sql, new {});
+
+  }
+}
 
